--- a/debian/control
+++ b/debian/control
@@ -13,4 +13,14 @@ Package: libspdlog-dev
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Very fast, header only, C++ logging library
- <long_description>
+ Features: Very fast - performance is the primary goal; Headers only; No
+ dependencies - just copy and use; call style using the excellent cppformat
+ library; ostream call style is supported too; Optional extremely fast
+ asynchronous mode - using lockfree queues and other tricks to reach millions
+ of calls/sec; Custom formatting; Multi/Single threaded loggers; Easily
+ extendable with custom log targets (just implement a single function in the
+ sink interface). Severity based filtering - threshold levels can be modified
+ in runtime as well as in compile time.
+ .
+ Various log targets:
+ Rotating log files, Daily log files, Console logging, Linux syslog.
