--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Debian Med Packaging Team <debian-med-packaging@lists.alioth.debian.
 Uploaders: Michael R. Crusoe <crusoe@ucdavis.edu>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/cgit/debian-med/spdlog.git
-Vcs-Git: git://anonscm.debian.org/debian-med/spdlog.git
+Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/spdlog.git
+Vcs-Git: https://anonscm.debian.org/debian-med/spdlog.git
 Homepage: https://github.com/COMBINE-lab/spdlog
 
 Package: libspdlog-dev
