--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Michael R. Crusoe <crusoe@ucdavis.edu>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/spdlog.git
-Vcs-Git: https://anonscm.debian.org/debian-med/spdlog.git
+Vcs-Git: https://anonscm.debian.org/git/debian-med/spdlog.git
 Homepage: https://github.com/COMBINE-lab/spdlog
 
 Package: libspdlog-dev
