--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Distributed under the MIT License (http://opensource.org/licenses/MIT)
 #
 
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1)
 project(spdlog VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -12,6 +12,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_library(spdlog INTERFACE)
 
 option(SPDLOG_BUILD_EXAMPLES "Build examples" OFF)
+option(SPDLOG_BUILD_TESTS "Build tests" OFF)
 
 target_include_directories(
     spdlog
@@ -20,9 +21,15 @@ target_include_directories(
     "$<INSTALL_INTERFACE:include>"
 )
 
+set(HEADER_BASE "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
+include(CTest)
 if(SPDLOG_BUILD_EXAMPLES)
-  enable_testing()
-  add_subdirectory(example)
+    add_subdirectory(example)
+endif()
+
+if(SPDLOG_BUILD_TESTS)
+    add_subdirectory(tests)
 endif()
 
 ### Install ###
