--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/cgit/debian-med/spdlog.git
 Vcs-Git: https://anonscm.debian.org/git/debian-med/spdlog.git
-Homepage: https://github.com/COMBINE-lab/spdlog
+Homepage: https://github.com/gabime/spdlog
 
 Package: libspdlog-dev
 Architecture: any
